spoiler-content: Fix alignment of copy button.
The copy icon was misaligned inside the code block
so, to fix it I changed the right property in the css
and this aligned the icon properly inside the block.

--- a/static/styles/rendered_markdown.css
+++ b/static/styles/rendered_markdown.css
@@ -483,7 +483,7 @@
         /* Having absolute positioning here ensures that the element
         doesn't scroll along with the code div in narrow windows */
         position: absolute;
-        right: 2px;
+        right: 16px;
         margin-top: -6px;
     }
 
